vision_ws/log/build_2024-11-26_23-43-00/camera_vision/stderr.log
  File "/home/hinfinity/Documents/robotica_2_2024/vision_ws/install/camera_vision/lib/python3.10/site-packages/camera_vision/examen_3.py", line 8
    from ./ArucoDistanceEstimator import ArUcoDistanceEstimator
          ^
SyntaxError: invalid syntax

